resources/style.css
@font-face {
	font-family: 'Raleway';
	font-style: normal;
	font-weight: 100 900;
	font-display: swap;
	src: url(/fonts/Raleway.woff2) format('woff2');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

@font-face {
	font-family: 'Raleway';
	font-style: italic;
	font-weight: 400;
	font-display: swap;
	src: url(/fonts/RalewayItalic.woff2) format('woff2');
	unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
}

:root {
	--space: 1rem;

	--color-dark: hsl(180, 100%, 5%);
	--color-light: hsl(180, 100%, 75%);

	--color-background: var(--color-dark);
	--color-text: var(--color-light);

	--min-font-size: 1rem;
	--pref-font-size: 3vw;
	--max-font-size: 1.3rem;

	--line-max-length: 55ch;

	--nav-height: 6.5ex;

	font-family: 'Raleway', sans-serif;
	font-size: clamp(var(--min-font-size), var(--pref-font-size), var(--max-font-size));

	color-scheme: dark;
	background-color: var(--color-background);
	color: var(--color-text);

	scroll-behavior: smooth;
	scroll-padding-top: var(--nav-height);
}

body {
	max-width: var(--line-max-length);
	margin: auto;
	padding: var(--space);
}

h1,
h2,
h3 {
	margin-block: calc(var(--space) / 2);
}

a {
	color: inherit;
}

a.cta {
    display: block;
    background-color: var(--color-text);
    color: var(--color-background);
    text-align: center;
    font-weight: bold;
    text-decoration: none;
    border-radius: 0.25em;
    padding: calc(var(--space) / 2);
}

nav {
	position: sticky;
	top: 0;
	background-color: var(--color-background);
	display: flex;
	align-items: center;
	height: var(--nav-height);
	overflow-x: auto;
	
	& a {
		flex-shrink: 0;

		&:not(:first-child) {
			margin-left: var(--space);
		}
	}
}



picture {
	float: left;
	margin-block-start: var(--space);
	margin-inline-end: var(--space);
}

p {
	text-align: justify;
	line-height: 1.5em;
}

.projects {
	display: grid;
	grid-template-columns: repeat(3, 1fr);
	gap: var(--space);

	& img {
		width: 100%;
		object-fit: contain;
	}
}

section li {
	margin-block-end: var(--space);
}

time {
	font-size: smaller;
}

.icons {
	display: flex;
	gap: var(--space);
	flex-wrap: wrap;
	
	& svg {
		flex-basis: 3rem;
		
		& path {
			fill: var(--color-text);
		}
	}
}

footer {
	border-block-start: 1px solid var(--color-text);
	text-align: center;
	font-size: small;
	padding: var(--space);
}

